# ai-hub

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  index.html  package-lock.json  package.json
.github/workflows/: fetch.yml  pages.yml  release.yml
data/: ai-hub.db  ai-hub.db-shm  ai-hub.db-wal  modules.json  news.json  papers.json  providers.json  sources.json  stats.json
desktop/: chat.html  index.html  package-lock.json  package.json  settings.html  tailwind.config.js  vite.config.ts
desktop/src/: App.tsx  ChatWindow.tsx  SettingsWindow.tsx  chat-main.tsx  settings-main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/resources/: default.db
desktop/src-tauri/src/: db.rs  lib.rs  main.rs  tray.rs
docs/: TECHNICAL.md  USER_GUIDE.md
docs/screenshots_new/: setting_llm_config.mov
preview/: index.html
preview-data/: modules.json  news.json  papers.json  providers.json
scripts/: create-tables.sql  engine.mjs  export-json.mjs  fetch-news.mjs  fetch-papers.mjs  llm-client.mjs  seed-sqlite.mjs  seed.mjs  setup.mjs  start.mjs  watch-wewe.mjs
scripts/fetchers/: api.mjs  index.mjs  rss.mjs  scrape.mjs  twitter.mjs  utils.mjs  wechat.mjs
src/app/: HomeClient.tsx  globals.css  layout.tsx  page.tsx
src/components/: AutoFetch.tsx  CategoryFilter.tsx  ChatWidget.tsx  FavoriteButton.tsx  Footer.tsx  HeroSection.tsx  LanguageSwitcher.tsx  Navbar.tsx  NewsCard.tsx  PaperCard.tsx  ProviderCard.tsx  SearchBar.tsx  ThemeToggle.tsx  (+2 more)
(+43 files in other folders)
