[package]
name = "ai-hub-widget"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_hub_widget_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
open = "5"
tauri-plugin-notification = "2"
